--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         </nav>
       </header>
       <section class="banner-section">
+        <div class="banner-content">
         <h1>Let's Finish our internal Evil</h1>
         <p>lorem10</p>
         <button>Donate Now</button>
+        </div>
+        
       </section>
     </main>
   </body>
